--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "mpso"
+name = "vpso"
 version = "0.0.0"
 authors = [
   { name="Filippo Airaldi", email="filippoairaldi@gmail.com" },
