--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Mathematics"
 ]
 dependencies = [
-    "numpy >= 1.21.6",
+    "numba >= 0.57.0",
     "scipy >= 1.10.1",
 ]
 
