--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,8 @@ jobs:
       - name: Test with unittest
         run: |
           coverage run -m unittest discover ./tests 'test_*.py'
+        env:
+          NUMBA_DISABLE_JIT: 1
       - name: Coverage with Code Climate
         uses: paambaati/codeclimate-action@v3.2.0
         env:
