--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ classifiers = [
 dependencies = [
     "numba >= 0.57.0",
     "scipy >= 1.10.1",
+    "typing_extensions >= 4.6.3",
 ]
 
 [project.urls]
