--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,8 @@ jobs:
           NUMBA_DISABLE_JIT: ${{ matrix.DISABLE_JIT }}
       - name: Coverage with Code Climate
         uses: paambaati/codeclimate-action@v4.0.0
-        if: ${{ matrix.DISABLE_JIT == 1 }}  # send report only when jit is disabled
+        # send report only when jit is disabled, and for python 3.11
+        if: ${{ matrix.DISABLE_JIT == 1 && matrix.python-version == "3.11" }}
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.CODECLIMATE_REPORTER_ID }}
         with:
