--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["setuptools>=61.0"]
+requires = ["setuptools>=61.0", "cython>=0.29.35"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "vpso"
-version = "1.0.1"
+version = "2.0.0"
 authors = [
   { name="Filippo Airaldi", email="filippoairaldi@gmail.com" },
 ]
