--- a/requirements-tests.txt
+++ b/requirements-tests.txt
@@ -1,4 +1,4 @@
-coverage==7.0.4
-parameterized==0.8.1
-pymoo==0.6.0.1
-pyyaml==6.0
+coverage[toml]>=7.3.2
+parameterized>=0.9.0
+pymoo>=0.6.0.1
+pyyaml>=6.0
